--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@auth0/angular-jwt": "^2.0.0",
+    "chart.js": "^2.7.2",
+    "chartjs-plugin-zoom": "^0.6.3",
     "core-js": "^2.5.4",
     "ng-flash-messages": "^0.2.0",
+    "ng2-charts": "^1.6.0",
     "rxjs": "^6.2.2",
     "zone.js": "^0.8.26"
   },
