--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^2.7.2",
     "chartjs-plugin-zoom": "^0.6.3",
     "core-js": "^2.5.4",
+    "moment": "^2.22.2",
     "ng-flash-messages": "^0.2.0",
     "ng2-charts": "^1.6.0",
     "rxjs": "^6.2.2",
