--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "concurrently": "*",
     "cors": "*",
     "express": "*",
-    "mongoose": "*",
-    "multer": "*",
     "jsonwebtoken": "*",
+    "mongo-morgan-ext": "^1.0.2",
+    "mongoose": "*",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.1",
     "passport": "*",
     "passport-jwt": "*",
     "python-shell": "*"
