--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "*",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
+    "oracledb": "^3.0.1",
     "passport": "*",
     "passport-jwt": "*",
     "python-shell": "*"
